--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "pixi.js": "^4.8.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-pixi-fiber": "^0.8.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
